--- a/packages.config
+++ b/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="angular-google-maps" version="2.1.5" targetFramework="net452" />
   <package id="Angular.UI.Bootstrap" version="0.13.3" targetFramework="net452" />
   <package id="angularjs" version="1.4.4" targetFramework="net452" />
-  <package id="AngularJS.Core" version="1.3.0" targetFramework="net452" />
+  <package id="AngularJS.Core" version="1.3.15" targetFramework="net452" />
   <package id="AngularJS.Intellisense" version="1.0.3" targetFramework="net452" />
   <package id="bootstrap" version="3.3.5" targetFramework="net452" />
   <package id="jQuery" version="1.9.1" targetFramework="net452" />
+  <package id="lodash" version="3.8.0" targetFramework="net452" />
 </packages>
