--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,15 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.2.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "validate-azure-ad-token": "^1.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
