--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "debug": "tsc"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "azure-ad-jwt": "^1.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
