--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "~4.16.1",
     "express-async-handler": "^1.2.0",
     "express-jwt": "^6.1.1",
+    "express-unless": "^1.0.0",
     "mongoose": "^6.2.3",
     "morgan": "~1.9.1"
   },
@@ -26,6 +27,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-jwt": "^6.0.4",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
