--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "bulma": "^0.9.3",
     "i18next": "^21.6.12",
     "i18next-http-backend": "^1.3.2",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
