--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-i18next": "^11.15.5",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
@@ -25,11 +26,12 @@
     "redux": "^4.1.2",
     "sass": "^1.49.9",
     "typescript": "^4.5.5",
+    "env-cmd": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "env-cmd -f ./production.env react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ."
@@ -53,8 +55,10 @@
     ]
   },
   "devDependencies": {
+    "@types/react-google-recaptcha": "^2.1.5",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.10.0",
     "eslint-plugin-react": "^7.29.2"
   }
