--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "azure-ad-jwt": "^1.1.0",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -21,9 +22,11 @@
     "express-jwt": "^6.1.1",
     "express-unless": "^1.0.0",
     "mongoose": "^6.2.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "serve-static": "^1.14.2"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-jwt": "^6.0.4",
